--- a/jxwebsite-frontend/src/App.css
+++ b/jxwebsite-frontend/src/App.css
@@ -40,3 +40,44 @@
 .read-the-docs {
   color: #888;
 }
+
+.home-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 40px;
+  /* background-color: #f5f5f5; */
+  min-height: 100vh;
+}
+
+  /* 覆蓋層樣式 */
+  .overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(135deg, #323d48, #e0c5ef);
+    color: #fff;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+    text-align: center;
+    cursor: pointer;
+  }
+  
+  .overlay-title {
+    font-size: 3rem;
+    font-weight: bold;
+    margin-bottom: 20px;
+    text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
+  }
+  
+  .overlay-text {
+    font-size: 1.2rem;
+    font-weight: 300;
+    margin-top: 10px;
+    color: #f9f9f9;
+  }
