修改樣式以及登入樣式邏輯 [ 穩定版]

--- a/jxwebsite-frontend/src/WriteBlog/WriteBlog.css
+++ b/jxwebsite-frontend/src/WriteBlog/WriteBlog.css
@@ -203,9 +203,9 @@
 
 .writeblog-empty-state {
     text-align: center;
-    color: #64748b;
+    color: #c9d8ed;
     padding: 40px;
-    font-size: 1.1rem;
+    font-size: 3.1rem;
 }
 
 .writeblog-createtime{
