--- a/jxwebsite-frontend/src/pages/Home.css
+++ b/jxwebsite-frontend/src/pages/Home.css
@@ -59,7 +59,7 @@ text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
   left: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(135deg, #323d48, #e0c5ef);
+  background: linear-gradient(135deg, #b0c7df, #e0c5ef);
   color: #fff;
   display: flex;
   flex-direction: column;
@@ -80,6 +80,7 @@ text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
 .overlay-text {
   font-size: 1.2rem;
   font-weight: 300;
+  font-weight: bolder;
   margin-top: 10px;
-  color: #f9f9f9;
+  color: white;
 }
